@@ -4,6 +4,10 @@
 	Myers <hughmyers@micron.com>)
 	(_replace_special_chars_late): verbar escape was happening in the
 	wrong place and this was ruining link expansion.
+	(add_item): Tweak so that we for long items we have some content
+	in the item description itself and some bold. This makes sure that
+	everything lines up. (thanks to Hugh S Myers for the original idea
+	and for the _split_delimited method).
 
 2001-11-16  Tim Jenness  <timj@jach.hawaii.edu>
 
@@ -27,7 +31,7 @@
 	* LaTeX.pm (add_item): Handle long item strings (from  Mark
 	A. Hershberger <mah@everybody.org>)
 	(_replace_special_chars): Escape ~ (from Simon Cozens
-	<simon@@cozens.net>)
+	<simon@cozens.net>)
 	Escape | (thanks to Marcel Grunauer <marcel@codewerk.com>)
 	Add support for E<verbar> and E<sol>
 
